# src/main/kotlin/com/drunkensoftball/api/roster/controller/RosterController.kt
@@ -4,6 +4,7 @@ import com.drunkensoftball.api.auth.domain.DSAuthentication
 import com.drunkensoftball.api.roster.domain.RosterEntry
 import com.drunkensoftball.api.roster.domain.RosterRequest
 import com.drunkensoftball.api.roster.service.RosterService
+import com.drunkensoftball.api.user.domain.User
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.security.core.annotation.AuthenticationPrincipal
 import org.springframework.web.bind.annotation.*
@@ -16,9 +17,10 @@ class RosterController {
     lateinit var rosterService: RosterService
 
     @RequestMapping(value = [URL_ROSTER], method = [POST])
-    fun addPlayer(@AuthenticationPrincipal authentication: DSAuthentication, @RequestBody rosterRequest: RosterRequest): RosterEntry {
+    fun addPlayer(@AuthenticationPrincipal user: User,
+                  @RequestBody rosterRequest: RosterRequest): RosterEntry {
 
-        return rosterService.addGuestPlayer(authentication,
+        return rosterService.addGuestPlayer(user,
                 rosterRequest.teamUuid,
                 rosterRequest.firstName,
                 rosterRequest.lastName,
