# src/main/kotlin/com/drunkensoftball/api/team/controller/TeamController.kt
@@ -8,7 +8,6 @@ import com.drunkensoftball.api.team.service.TeamService
 import com.drunkensoftball.api.user.domain.User
 import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.data.domain.Pageable
-import org.springframework.security.core.Authentication
 import org.springframework.security.core.annotation.AuthenticationPrincipal
 import org.springframework.web.bind.annotation.*
 import org.springframework.web.bind.annotation.RequestMethod.*
@@ -25,6 +24,13 @@ class TeamController {
         return teamService.createTeam(user, createTeamRequest.name)
     }
 
+    @RequestMapping(value = [URL_TEAM], method = [PUT])
+    fun updateTeam(@AuthenticationPrincipal user: User,
+                   @RequestBody request: CreateTeamRequest,
+                   @PathVariable(value = UUID) teamUuid: String): Team {
+        return teamService.updateTeam(user, teamUuid, request.name)
+    }
+
     @RequestMapping(value = [URL_TEAM], method = [GET])
     fun getTeams(@AuthenticationPrincipal user: User,
                  pageable: Pageable): List<Team> {
@@ -33,13 +39,15 @@ class TeamController {
     }
 
     @RequestMapping(value = [URL_TEAM_UUID], method = [GET])
-    fun getTeam(@AuthenticationPrincipal user: User, @PathVariable(value = UUID) teamUuid: String): Team {
+    fun getTeam(@AuthenticationPrincipal user: User,
+                @PathVariable(value = UUID) teamUuid: String): Team {
 
         return teamService.getTeam(user, teamUuid)
     }
 
     @RequestMapping(value = [URL_TEAM_UUID], method = [DELETE])
-    fun deleteTeam(@AuthenticationPrincipal user: User, @PathVariable(value = UUID) teamUuid: String) {
+    fun deleteTeam(@AuthenticationPrincipal user: User,
+                   @PathVariable(value = UUID) teamUuid: String) {
         teamService.deleteTeam(user, teamUuid)
     }
 
